--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dog-daycare-api",
   "version": "0.1.0",
-  "homepage" : "http://Lagos77.github.io/Dogs_Daycare_Api",
+  "homepage": "http://Lagos77.github.io/Dogs_Daycare_Api",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -10,7 +10,8 @@
     "gh-pages": "^3.2.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -20,7 +21,6 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-
   },
   "eslintConfig": {
     "extends": [
